using System;

namespace IndependentWork16
{
    class AvailabilityChecker : IAvailabilityChecker
    {
        public bool IsAvailable(DateTime date)
        {
            return true;
        }
    }
}
