using System;

namespace IndependentWork16
{
    interface IAvailabilityChecker
    {
        bool IsAvailable(DateTime date);
    }
}
